--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.32",
-        "sass-embedded": "^1.81.0",
         "tailwindcss": "^3.4.0",
         "vite": "^5.0"
     },
@@ -21,6 +20,8 @@
         "@fortawesome/fontawesome-free": "^6.7.1",
         "@popperjs/core": "^2.11.8",
         "aesthetic-css": "^1.0.1",
-        "bootstrap": "^5.3.3"
+        "bootstrap": "^5.3.3",
+        "datatables.net": "^2.1.8",
+        "jquery": "^3.7.1"
     }
 }
